<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout_episode_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_episode_info"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/show"
                app:navigationIcon="@drawable/ic_round_close" />
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_one_episode_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_two_episode_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.45"
            android:orientation="horizontal"/>

        <ImageView
            android:id="@+id/image_cover_episode_info"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout_episode_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline_one_episode_info"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_container_text_season_and_chapter_info"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            app:layout_constraintBottom_toTopOf="@+id/card_container_text_title_episode_info"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/text_season_and_chapter_info"
                style="?attr/textAppearanceBody2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_8"
                tools:text="Este es el titulo del episodio que resulta largo" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_container_text_title_episode_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?attr/materialCardViewFilledStyle"
            android:layout_margin="@dimen/margin_16"
            app:layout_constraintBottom_toTopOf="@id/guideline_two_episode_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/text_title_episode_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_8"
                style="?attr/textAppearanceHeadline5"
                tools:text="Este es el titulo del episodio que resulta largo"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="@dimen/margin_16"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.JobsityChallengeApp.ShowEpisodeInfo"
            app:layout_constraintTop_toTopOf="@id/guideline_two_episode_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_16"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/episode_info"
                        style="?attr/textAppearanceHeadline6"/>
                    <TextView
                        android:id="@+id/text_summary_episode_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/summary"
                        android:paddingTop="@dimen/margin_16"
                        style="?attr/textAppearanceBody1"/>
                </LinearLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>